...
    <string name="message_recording_started">Recording Started</string>
    <string name="nav_drawer_close_description">Close Navigation Drawer</string>
    <string name="nav_drawer_open_description">Open Navigation Drawer</string>
    <string name="nav_header_subtitle_version" translatable="false">@string/versionName</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="pref_confirm_delete_summary">Show confirmation dialog when deleting file</string>
    <string name="pref_confirm_delete_title">Confirmation for Delete</string>
    <string name="pref_list_audio_quality_dialog_title">Select Audio Quality</string>
    <string name="pref_list_audio_quality_title">Recording Audio Quality</string>
    <string name="pref_path_new_folder">New Folder</string>
    <string name="pref_path_new_folder_dialog_title">New Folder Name</string>
    <string name="pref_recording_storage_path_title">Recording Path</string>
    <string name="pref_request_filename_summary">Request file name after completing the recording</string>
    <string name="pref_request_filename_title">Request Filename</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="progress_bar">Progress bar</string>
    <string name="rate">Rate</string>
    <string name="rate_dialog_info">If you enjoy using this app, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="recording_in_progress">Recording....</string>
...
